restructure repo, first 1.20.5 build